[gd_scene load_steps=7 format=3 uid="uid://p4ywuh10ffdg"]

[ext_resource type="Script" uid="uid://bhodjll8vs63l" path="res://scenes/main/ui/unit_upgrade/unit_upgrade.gd" id="1_6jwuo"]
[ext_resource type="PackedScene" uid="uid://dy01mpogxaeix" path="res://scenes/main/ui/unit_upgrade/upgrade_cell/upgrade_cell.tscn" id="2_hp5hx"]

[sub_resource type="Gradient" id="Gradient_hp5hx"]
offsets = PackedFloat32Array(0.54474705)
colors = PackedColorArray(0.85452527, 0.1544191, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dlegm"]
gradient = SubResource("Gradient_hp5hx")
width = 256
height = 40

[sub_resource type="Gradient" id="Gradient_3lhdh"]
offsets = PackedFloat32Array(0.54474705)
colors = PackedColorArray(0.18112081, 0.6981439, 5.7756904e-07, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lv2ss"]
gradient = SubResource("Gradient_3lhdh")
width = 256
height = 40

[node name="UnitUpgrade" type="PanelContainer" unique_id=807638241]
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6jwuo")
upgrade_cell = ExtResource("2_hp5hx")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=39912554]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=258056680]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1400728997]
unique_name_in_owner = true
layout_mode = 2
text = "Unit"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer" unique_id=1917163383]
layout_mode = 2

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/CenterContainer" unique_id=960916231]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
value = 1.0
texture_under = SubResource("GradientTexture2D_dlegm")
texture_progress = SubResource("GradientTexture2D_lv2ss")

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer" unique_id=1039744907]
unique_name_in_owner = true
layout_mode = 2
text = "100/100"

[node name="UpgradeContainer" type="GridContainer" parent="MarginContainer/VBoxContainer" unique_id=632711566]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1552386665]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
